add 함수 리터럴, 함수 선언문, 함수 표현식.md

--- a/스프레드 연산자.md
+++ b/스프레드 연산자.md
@@ -7,7 +7,7 @@
 배열을 복사할 때 어떤 방법을 쓰면 좋을까? 다음 예시 코드를 보며 생각해보자.
 
 ```javascript
-const hobbies = ['sport', 'games'];
+const hobbies = ['sport', 'game'];
 const coppiedHobbies = [hobbies];
 
 console.log(coppiedHobbies); // [['sport', 'games']]
@@ -18,7 +18,7 @@ console.log(coppiedHobbies); // [['sport', 'games']]
 스프레드 연산의 용도가 여기서 드러난다. 스프레드 연산을 사용하면, 반복 가능한 객체를 개별 요소로 분리할 수 있다.
 
 ```javascript
-const hobbies = ['sport', 'games'];
+const hobbies = ['sport', 'game'];
 const coppiedHobbies = [...hobbies];
 
 console.log(coppiedHobbies); // ['sport', 'games']
@@ -45,9 +45,9 @@ console.log(coppiedHobbies); // ['sport', 'games']
   var arr1 = [1, 2, 3];
   var arr2 = [4, 5, 6];
   
-  arr1 = [...arr1, ...arr2];
+  newArr = [...arr1, ...arr2];
   
-  console.log(arr1); // [ 1, 2, 3, 4, 5, 6 ]
+  console.log(newArr); // [ 1, 2, 3, 4, 5, 6 ]
   ```
 
   또한, 다양한 방식의 병합을 지원한다.
@@ -77,7 +77,7 @@ console.log(coppiedHobbies); // ['sport', 'games']
 
   ```javascript
   var arr1 = [1, 2, 3];
-  var arr2 = arr1.slice;
+  var arr2 = arr1.slice();
   arr2.push(4);
   
   console.log(arr1); // [1, 2, 3]
@@ -86,14 +86,6 @@ console.log(coppiedHobbies); // ['sport', 'games']
 
   스프레드 연산자를 이용하면, 새로운 배열을 간단하게 생성할 수 있다.
 
-  ```javascript
-  var arr1 = [1, 2, 3];
-  var arr2 = [...arr1];
-  arr2.push(4);
-  
-  console.log(arr1); // [1, 2, 3]
-  console.log(arr2); // [1, 2, 3, 4]
-  ```
 
 
 
