--- a/단축 평가.md
+++ b/단축 평가.md
@@ -31,7 +31,7 @@
   var correct = false;
   var message = '';
   
-  message = correct && 'NO' // 'NO'
+  message = correct || 'NO' // 'NO'
   ```
 
 
@@ -119,7 +119,7 @@
   var getProp = target?.value; // undefined
   ```
 
-  옵셔널 체이닝 연산자를 이용하면, 좌항의 피연산자가 null 인지 undefined인지 확인한다. null 혹은 undefined이면 null을 반환하고, 그렇지 않으면 프로퍼티 참조를 이어간다.
+  옵셔널 체이닝 연산자를 이용하면, 좌항의 피연산자가 null 인지 undefined인지 확인한다. null 혹은 undefined이면 undefined을 반환하고, 그렇지 않으면 프로퍼티 참조를 이어간다.
 
   
 
@@ -132,7 +132,7 @@
   // 빈 문자열은 falsy 값이다. 따라서 평가가 종료되어 length에 ''이 할당된다.
   
   var length = str && str.length;
-  console.log(length); // ''
+  console.log(length); // '' 
   ```
 
   
@@ -147,7 +147,7 @@
 
   
 
-#### 4. null 병합 연산자
+#### 4. null 병합 연산자 ??
 
 
 
