--- a/함수 리터럴, 함수 선언문, 함수 표현식.md
+++ b/함수 리터럴, 함수 선언문, 함수 표현식.md
@@ -41,7 +41,7 @@ function add(x, y) {
 * 함수 선언문은 <strong>표현식이 아닌 문</strong>이고, 함수 리터럴은 표현식이다. 그런데 아래 예시를 보면, 표현식이 아닌 문에 해당하는 함수 선언문을 변수에 할당하고 있다.
 
   ```javascript
-  var add = function add(x, y) {
+  var add = function addNumbers(x, y) {
   	return x + y;
   }
   ```
@@ -69,7 +69,7 @@ function add(x, y) {
   ```javascript
   (function bar() { console.log('bar')})
   
-  bar(); // ???
+  bar(); // 호출이 안되면: 리터럴임, 호출이 되면 선언식임.
   ```
 
   이번에는 함수 리터럴 표현식으로 해석된다. 왜냐하면 ()이라는 그룹 연산자로 묶여 있기 때문이다.
@@ -86,8 +86,9 @@ function add(x, y) {
   function add (x, y) {
   	return x + y;
   }
+  
   ```
-
+  
   위 예제에서는 add 라는 식별자를 새로이 생성하고 에 함수 객체를 할당하게 된다. 따라서, 외부에서 add()를 통해 함수를 호출할 수 있다.
 
 
@@ -114,6 +115,7 @@ var add = function (x, y) {
 console.log(add(2, 5)); // 7
 console.log(sub(2, 5)); // TypeError
 
+// add 변수를 만들고, 함수를 거기에 할당
 function add (x, y) {
     return x + y;
 }
