--- a/13. 스코프.md
+++ b/13. 스코프.md
@@ -4,9 +4,9 @@
 
 1. 스코프란?
 
-   <strong>식별자가 유효한 범위. 자바스크립트 엔진은 스코프를 통해 어떤 변수를 참조해야 할 지 결정한다.
+   식별자가 유효한 범위. 자바스크립트 엔진은 스코프를 통해 어떤 변수를 참조해야 할 지 결정한다.
 
-   따라서, 스코프란 자바스크립트 엔진이 식별자를 검색할 때 사용하는 규칙이라고도 할 수 있다.</strong>
+   따라서, 스코프란 자바스크립트 엔진이 식별자를 검색할 때 사용하는 규칙이라고도 할 수 있다.
 
    ```javascript
    var x = "global";
@@ -54,13 +54,13 @@
    ```javascript
    var i = 0;
    
-   for (i = 0; i < 10; i++) {
+   for (let i = 0; i < 10; i++) {
      // 이미 전역에서 변수 i가 선언되었다.
      // 따라서, for문에서는 전역 변수 i의 값을 재할당하고 있다.
      console.log(i); // 0 1 2 3 4 5 6 7 8 9
    }
    
-   console.log(i); // 10
+   console.log(i); // 0
    ```
 
    <strong>ES6에서 도입된 const, let 키워드는 블록 레벨 스코프를 지원한다. </strong>
@@ -88,8 +88,8 @@
      console.log(x);
    }
    
-   foo(); // ??
-   bar(); // ??
+   foo(); // 동적 스코프 였다면? 10 x, 1이 찍힌다.
+   bar(); // 1
    ```
 
    bar 함수는 전역에서 정의된 함수다. 따라서, 어디에서 호출했는지에 상관없이 상위 스코프를 전역으로 상정한다.
